# cargo-deadlinks

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  deploy.yml
src/: check.rs  lib.rs  main.rs  parse.rs
tests/: broken_links.rs  non_existent_http_link.rs  simple_project.rs  working_http_check.rs
tests/broken_links/: Cargo.toml
tests/broken_links/hardcoded-target/: index.html
tests/broken_links/src/: lib.rs
tests/cli_args/: Cargo.toml
tests/cli_args/src/: lib.rs
tests/html/: anchors.html  index.html  range.html
tests/non_existent_http_link/: Cargo.toml
tests/non_existent_http_link/src/: lib.rs
tests/renamed_package/: Cargo.toml
tests/simple_project/src/: lib.rs
tests/working_http_check/: Cargo.toml
tests/working_http_check/src/: lib.rs
tests/workspace/: Cargo.toml
tests/workspace/a/: Cargo.toml
tests/workspace/b/: Cargo.toml
