[package]
name = "cargo-deadlinks"
description = "Cargo subcommand for checking your documentation for broken links"
version = "0.4.2"
authors = ["Maximilian Goisser <goisser94@gmail.com>", "Joshua Nelson <jyn514@gmail.com"]
edition = "2018"
repository = "https://github.com/deadlinks/cargo-deadlinks"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["http-check"]
http-check = ["ureq"]

[dependencies]
cargo_metadata = "0.9"
docopt = "1"
env_logger = "0.8"
html5ever = "0.24"
log = "0.4"
num_cpus = "1.8"
rayon = "1.0"
ureq = { version = "1.5.2", features = ["tls"], default-features = false, optional = true }
serde = "1.0"
serde_derive = "1.0"
url = "2"
walkdir = "2.1"
serde_json = "1.0.34"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0.0"
