[package]
name = "cargo-deadlinks"
description = "Cargo subcommand for checking your documentation for broken links"
version = "0.7.1"
authors = ["Maximilian Goisser <goisser94@gmail.com>", "Joshua Nelson <jyn514@gmail.com"]
edition = "2018"
repository = "https://github.com/deadlinks/cargo-deadlinks"
readme = "README.md"
license = "MIT OR Apache-2.0"
autobins = false
default-run = "deadlinks"

[[bin]]
name = "cargo-deadlinks"
required-features = ["cargo"]

[[bin]]
name = "deadlinks"

[features]
cargo = ["cargo_metadata", "serde_json"]
default = ["cargo"]

[dependencies]
cached = { version = "0.20.0", default-features = false }
cargo_metadata = { version = "0.12", optional = true }
serde_json = { version = "1.0.34", optional = true }
pico-args = "0.3"
env_logger = "0.8"
lol_html = "0.2"
log = "0.4"
num_cpus = "1.8"
once_cell = "1.5.1"
rayon = "1.0"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
ureq = { version = "1.5.4", features = ["tls"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
url = "2"
# Try to keep this in sync with `url`'s version
percent-encoding = "2"
walkdir = "2.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0.0"
mockito = "0.28.0"
